# gbm-stock-simulator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
gbm_sim/: backtest.py  bootstrap.py  calibration.py  data.py  diagnostic.py  simulation.py
scripts/: compare_models.py
tests/: test_bootstrap.py  test_diagnostic.py  test_simulation.py
