[project]
name = "gbm-stock-simulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "yfinance",
    "matplotlib",
    "streamlit"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:BuildBackend"